--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
+/* src/App.css */
+body {
+  background-image: ("T.jpg");
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.forBgImg {
+  background-image: url("./T.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.myName {
+  font-display: initial;
+  color: blue;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url("Background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+}
+
+.ImgHolder {
+  margin-left: 0px;
+  margin-top: 0px;
+  position: flex;
+  flex-direction: row;
+}
+
+.portfolio-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+.about-section,
+.projects-section,
+.skills-section,
+.contact-section {
+  background-color: #f7f7f7;
+  padding: 40px 0;
+}
+
+h2 {
+  color: #333;
+}
+
+.projects-section ul {
+  list-style: none;
+  padding: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+}
+
+.projects-section li {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 20px;
+  margin: 10px;
+  max-width: 300px;
+}
+
+.contact-section p {
+  margin: 10px 0;
+}
+
+.contact-section a {
+  color: #007bff;
+  text-decoration: none;
+}
+* {
+  text-align: center;
+}
+
+.content {
+  position: relative;
+  padding: 25px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-self: auto;
+  width: 300px;
+  height: 200px;
+  border: 3px;
+  border-style: double;
+  border-color: rgb(39, 79, 0);
+  margin: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.content:not(:last-child)::after {
+  content: "";
+  position: relative;
+  top: 50%;
+  right: 0;
+  height: 50%;
+  border-right: 1px solid #000; /* Adjust color and style as needed */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contentText {
+  color: black;
+  font: 100;
+  font-display: initial;
+  text-align: center;
+  margin-bottom: 5px;
+  padding: 10px;
+}
+
+#englishGrammar {
+  background-image: url("./englishGrammar.png");
+  background-size: cover;
+  background-position: center;
+}
+
+#homePage {
+  background-image: url("./HomePage.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.projectsContainer {
+  height: 450px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-direction: row;
+  align-items: center;
 }
