--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,22 @@
 /* src/App.css */
 body {
-  background-image: ("T.jpg");
-  background-size: cover;
-  background-position: right;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.forBgImg {
-  background-image: url("./T.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
+#Iam {
+  color: white;
+  size: 25px;
+  font-family: monospace;
 }
 .myName {
+  font-family: "Courier New", Courier, monospace;
   font-display: initial;
   color: blue;
 }
 
 .App-header {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-image: url("Background.jpg");
   background-size: cover;
   background-position: center;
@@ -37,6 +30,10 @@ body {
   margin-top: 0px;
   position: flex;
   flex-direction: row;
+}
+
+.img {
+  margin: 10px;
 }
 
 .portfolio-container {
@@ -57,7 +54,6 @@ p {
 .projects-section,
 .skills-section,
 .contact-section {
-  background-color: #f7f7f7;
   padding: 40px 0;
 }
 
@@ -73,7 +69,6 @@ h2 {
 }
 
 .projects-section li {
-  background-color: #fff;
   border: 1px solid #ddd;
   padding: 20px;
   margin: 10px;
@@ -94,7 +89,6 @@ h2 {
 
 .content {
   position: relative;
-  padding: 25px;
   align-items: center;
   align-self: auto;
   width: 300px;
@@ -124,9 +118,10 @@ h2 {
 }
 
 #englishGrammar {
+  margin-left: 0px;
   background-image: url("./englishGrammar.png");
   background-size: cover;
-  background-position: center;
+  background-position: left;
 }
 
 #homePage {
@@ -136,10 +131,10 @@ h2 {
 }
 
 .projectsContainer {
+  /* border-right: ; */
   height: 450px;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: row;
-  flex-direction: row;
-  align-items: center;
+  align-items: left;
 }
