--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 /* src/App.css */
 * {
   color: rgb(0, 0, 0);
-  text-align: center;
-  z-index: -4;
   justify-content: center;
   align-items: center;
+  -webkit-text-stroke: 0.3px #ffffff;
 }
 
 .projects {
@@ -12,10 +11,9 @@
   justify-content: flex-start;
   overflow-x: scroll;
   white-space: nowrap;
+  padding: 40px;
 }
-.forBgImg {
-  color: skyblue;
-}
+
 .App {
   width: 100%;
   height: 100%;
@@ -37,16 +35,21 @@
   background-repeat: no-repeat;
   height: 100vh;
   width: 100vw;
-
+  overflow-x: hidden;
   p {
-    color: rgb(255, 0, 0);
-    size: 25px;
+    color: rgb(255, 79, 79);
+    size: 30px;
+    font-size: 30px;
     font-family: monospace;
     font-weight: bolder;
+
+    -webkit-text-stroke: 1.5px #000000;
   }
 
   h1 {
     color: rgb(181, 187, 0);
+    font-size: 45px;
+    -webkit-text-stroke: 1.5px #000000;
   }
 }
 
@@ -67,23 +70,25 @@
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 40px;
   margin-bottom: 10px;
 }
-
 p {
-  font-size: 1.5rem;
+  font-size: 25px;
+  font-weight: bolder;
 }
 
 .about,
-.projects,
 .skills,
 .contact {
   padding: 40px;
+  overflow-x: hidden;
 }
 
 h2 {
   color: cyan;
+  font-size: 45px;
+  -webkit-text-stroke: 1.5px #000000;
 }
 
 .contact-section p {
@@ -145,27 +150,12 @@ h2 {
   height: 320px;
   padding: 15px;
   margin: 15px;
-  background-color: gray;
+  background-color: rgb(2, 126, 143, 0.5);
   box-shadow: 10px 5px 0px 0px;
-  p {
-    justify-content: start;
-  }
-}
-
-@media (min-width: 767px) {
-  .lineBreak {
-    height: auto;
-    width: 2px;
-    margin: 15px;
-    background-color: #000;
-  }
-}
-
-@media (max-width: 766px) {
-  .lineBreak {
-    height: 2px;
-    width: auto;
-    margin: 15px;
-    background-color: #000;
+  border-radius: 3%;
+  a {
+    font-size: 14px;
+    font-weight: bold;
+    -webkit-text-stroke: 0.1px #ffffff;
   }
 }
