--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,34 @@ h1 {
   width: 55px;
   transition: 0.75s;
 }
+
+.rdrs {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
+  margin-top: auto;
+  justify-content: space-between;
+}
+.redirects {
+  font-size: 12px;
+  height: 30px;
+  width: auto;
+  align-items: center;
+  justify-self: center;
+  text-decoration: none;
+  margin: 15px 50px;
+  padding: 10px 20px 0px 20px;
+  font-family: monospace;
+  background-color: #414141;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.redirects:hover {
+  background-color: #626262;
+  color: white;
+}
+
 .img {
   margin: 10px;
 }
@@ -54,7 +82,7 @@ h1 {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 30px;
   margin-bottom: 10px;
 }
 
