--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,10 @@
   -webkit-text-stroke: 0.3px #ffffff;
   overflow-x: hidden;
 }
-
 .projects {
   display: flex;
   justify-content: flex-start;
   white-space: nowrap;
-  padding: 40px;
 }
 
 .App {
@@ -57,14 +55,13 @@ h1 {
   width: auto;
   align-items: center;
   justify-self: center;
-  text-decoration: none;
+  cursor: pointer;
   margin: 15px 50px;
-  padding: 10px 20px 0px 20px;
+  padding: 10px 30px;
+  border-radius: 30px;
   font-family: monospace;
-  background-color: #414141;
+  background-color: rgba(189, 189, 189, 0.3);
   border: 1px solid #007bff;
-  border-radius: 5px;
-  transition: background-color 0.3s ease, color 0.3s ease;
 }
 .redirects:hover {
   background-color: #626262;
@@ -89,8 +86,9 @@ h1 {
 .about,
 .skills,
 .contact {
-  padding: 40px;
+  margin: 40px 0px;
   overflow-x: hidden;
+  border-radius: 15px;
 }
 h2:hover {
   color: rgb(0, 211, 211);
@@ -160,25 +158,27 @@ section:hover {
   background-size: cover;
   background-position: center;
 }
-
+a {
+  font-size: 14px;
+  font-weight: bold;
+  -webkit-text-stroke: 0.1px #000000;
+}
 .project {
   font-size: small;
-  width: 330px;
-  height: 320px;
+  width: auto;
+  height: auto;
   padding: 15px;
   margin: 15px;
   background-color: rgb(2, 126, 143, 0.5);
   box-shadow: 10px 5px 0px 0px;
   border-radius: 3%;
-  a {
-    font-size: 14px;
-    font-weight: bold;
-    -webkit-text-stroke: 0.1px #ffffff;
-  }
 }
 .project:hover {
   background-color: rgba(0, 112, 126, 0.8);
   color: red;
   transition: 0.75s;
   font-weight: bold;
+}
+::-webkit-scrollbar {
+  display: none;
 }
