--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   align-items: center;
   -webkit-text-stroke: 0.3px #ffffff;
   overflow-x: hidden;
+  animation: backwards;
 }
 .projects {
   display: flex;
@@ -24,6 +25,7 @@
   font-family: "Nabla, sans-serif";
   font-display: initial;
   color: rgb(255, 251, 0);
+  -webkit-text-stroke: 1.5px #000;
 }
 h1 {
   font-size: 45px;
@@ -175,7 +177,7 @@ a {
 }
 .project:hover {
   background-color: rgba(0, 112, 126, 0.8);
-  color: red;
+  color: rgb(255, 0, 0, 0.5);
   transition: 0.75s;
   font-weight: bold;
 }
