--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -1,5 +1,11 @@
 /* Header.css */
-
+* {
+  color: rgb(0, 0, 0);
+  justify-content: center;
+  align-items: center;
+  -webkit-text-stroke: 0.3px #ffffff;
+  overflow-x: hidden;
+}
 .App-header {
   display: flex;
   flex-direction: column;
