--- a/src/Pages/projects/projects.css
+++ b/src/Pages/projects/projects.css
@@ -2,6 +2,7 @@
   width: 200;
   margin: 15px;
   padding: 5px 20px;
+  padding: 10 20;
   border-width: 2px; /* Adjust the width of the border */
   background-color: transparent;
   border: 4px solid;
