--- a/src/Pages/projects/projects.css
+++ b/src/Pages/projects/projects.css
@@ -3,6 +3,7 @@
   margin: 15px;
   padding: 5px 20px;
   padding: 10 20;
+  border-radius: 20px;
   border-width: 2px; /* Adjust the width of the border */
   background-color: transparent;
   border: 4px solid;
@@ -20,7 +21,7 @@
   border-image-slice: 1; /* Use 1 to slice the entire border */
 }
 .buttons:hover {
-  background-color: rgb(177, 171, 171, 0.5);
+  background-color: rgb(177, 171, 171, 0.3);
   transition: 1s;
 }
 .projectText {
@@ -30,11 +31,11 @@
 .projectNames {
   padding: 8px 20px;
   margin: 5px;
-  background-color: rgba(178, 178, 178, 0.539);
+  background-color: rgba(178, 178, 178, 0.237);
   border-radius: 30px;
 }
 .projectNames:hover {
-  background-color: rgb(177, 171, 171);
+  background-color: rgba(177, 171, 171, 0.449);
   transition: 1s;
 }
 .projects {
