--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   font-weight: bold;
   overflow-x: hidden;
   transition: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 .projects {
@@ -46,8 +48,9 @@
   -webkit-text-stroke: 1.5px #000;
 }
 .night h1 {
-  color: yellowgreen;
+  color: rgb(21, 224, 251);
 }
+
 h1 {
   font-size: 45px;
   color: rgb(0, 132, 132);
@@ -65,6 +68,7 @@ h1 {
 }
 
 .rdrs {
+  margin: 10px;
   display: flex;
   flex-direction: row;
   position: sticky;
@@ -73,12 +77,12 @@ h1 {
   justify-content: space-between;
 }
 .redirects {
-  font-size: 12px;
-  width: 40px;
+  font-size: small;
   align-items: center;
   justify-self: center;
+  width: 30px;
   margin: 5px;
-  padding: 15px 30px;
+  padding: 5px 15px;
   border-radius: 30px;
   font-family: monospace;
   font-weight: bolder;
@@ -187,6 +191,9 @@ h2 {
   padding: 10px;
 }
 section {
+  margin: 15px;
+  padding: 15px;
+  border-radius: 3%;
   background-color: rgba(161, 161, 161, 0.4);
 }
 section:hover {
