--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@
   background-repeat: repeat;
   width: 100%;
   height: 100%;
+  align-items: center;
+  justify-items: center;
   margin: 0;
   padding: 0;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -107,9 +109,6 @@ h1 {
 
 .img {
   margin: 10px;
-}
-.App {
-  background-image: "";
 }
 .portfolio-container {
   max-width: 800px;
