--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   align-items: center;
   justify-content: center;
 }
-
+.night p {
+  color: white;
+}
 .projects {
   display: flex;
   justify-content: flex-start;
@@ -61,6 +63,7 @@ h1 {
 .ImgHolder {
   margin-left: 0px;
   margin-top: 0px;
+  max-height: 40px;
   display: flex;
 }
 .img:hover {
@@ -73,16 +76,16 @@ h1 {
   margin: 10px;
   display: flex;
   flex-direction: row;
-  position: sticky;
   margin-bottom: 15px;
   margin-top: auto;
+  align-items: center;
   justify-content: space-between;
 }
 .redirects {
   font-size: small;
   align-items: center;
   justify-self: center;
-  width: 30px;
+  width: auto;
   margin: 5px;
   padding: 5px 15px;
   border-radius: 30px;
@@ -105,15 +108,26 @@ h1 {
 .redirects:hover {
   background-color: #626262;
   color: rgb(196, 0, 0);
+  transition: 1s;
 }
 
+.redirectTitle {
+  display: none;
+}
+.redirects:hover .redirectTitle {
+  display: block;
+
+  transition: 1s;
+}
 .img {
   margin: 10px;
 }
 .portfolio-container {
-  max-width: 800px;
-  margin: 0 auto;
+  width: auto;
+  margin: 15px;
   position: sticky;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -136,6 +150,9 @@ h1 {
   margin: 40px 0px;
   overflow-x: hidden;
   border-radius: 15px;
+}
+.contact {
+  margin: 5vh 20vw;
 }
 h2:hover {
   color: rgb(172, 237, 255);
@@ -180,7 +197,9 @@ h2 {
   height: 50%;
   border-right: 1px solid #000; /* Adjust color and style as needed */
 }
-
+.night .contentText {
+  color: black;
+}
 .contentText {
   color: rgb(255, 255, 255);
   font: 100;
