--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,24 @@
   align-items: center;
   justify-content: center;
 }
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgba(0, 0, 0, 0.93);
+  border: 2px solid rgb(6, 153, 251);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: cyan; /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Rounded corners for the thumb */
+  border: 3px solid #000000aa; /* Adds space around the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the thumb when hovered */
+}
+
 .night p {
   color: white;
 }
@@ -63,7 +81,7 @@ h1 {
 .ImgHolder {
   margin-left: 0px;
   margin-top: 0px;
-  max-height: 40px;
+  min-height: 0px;
   display: flex;
 }
 .img:hover {
@@ -86,6 +104,8 @@ h1 {
   align-items: center;
   justify-self: center;
   width: auto;
+  min-width: 50px;
+  min-height: 30px;
   margin: 5px;
   padding: 5px 15px;
   border-radius: 30px;
@@ -93,6 +113,8 @@ h1 {
   font-weight: bolder;
   background-color: rgba(189, 189, 189, 0.3);
   border: 2px solid #dc3700;
+  align-items: center;
+  justify-content: center;
 }
 .night .redirects {
   border: 2px solid cyan;
@@ -114,10 +136,14 @@ h1 {
 .redirectTitle {
   display: none;
 }
+.redirectIcon {
+  margin-top: 5px;
+}
+.redirects:hover .redirectIcon {
+  display: none;
+}
 .redirects:hover .redirectTitle {
   display: block;
-
-  transition: 1s;
 }
 .img {
   margin: 10px;
@@ -136,7 +162,7 @@ h1 {
 }
 .skillImgs {
   padding: 5px;
-  margin: 25px 0px;
+  margin: 15px 0px;
   position: relative;
 }
 .skillImgs:hover {
@@ -247,4 +273,22 @@ a {
   color: rgb(255, 0, 0, 0.5);
   transition: 0.75s;
   font-weight: bold;
+}
+
+.messageForm {
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.resizable {
+  min-width: 300px;
+  min-height: 30px;
+  margin: 15px;
+  background-color: rgb(5, 97, 97);
+}
+.detailsInput {
+  min-height: 50px;
+  resize: both;
+  min-width: 300px;
+  margin: 15px;
+  background-color: rgb(5, 97, 97);
 }
