responsive navBar fix

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,9 @@ h1 {
   margin-top: 0px;
   min-height: 0px;
   display: flex;
+  overflow-x: auto;
 }
+
 .img:hover {
   height: 55px;
   width: 55px;
