--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -14,11 +14,29 @@
   background-position: center;
   text-align: center;
   color: white;
+  position: relative; /* Needed to position the pseudo-element */
+}
+
+.App-header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-image: url(../../Assets/logo.png);
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
+  opacity: 0.4; /* Adjust the opacity value as needed */
+  z-index: 0; /* Ensure the pseudo-element is behind the content */
 }
+
+.App-header > * {
+  position: relative;
+  z-index: 1; /* Ensure the content is above the pseudo-element */
+}
+
 .myName {
   font-size: 30px;
   margin-top: 20px;
