--- a/src/App.css
+++ b/src/App.css
@@ -95,12 +95,23 @@ h1 {
 .rdrs {
   margin: 10px;
   display: flex;
+  margin-top: 10px;
+  margin-bottom: auto;
   flex-direction: row;
-  margin-bottom: 15px;
-  margin-top: auto;
   align-items: center;
   justify-content: space-between;
 }
+.mobileMenu {
+  margin-right: 10px;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  box-shadow: 0px 2px 4px 8px rgba(136, 112, 112, 0.562); /* optional, for some depth */
+  z-index: 1000; /* to ensure it stays on top */
+  display: flex;
+  flex-direction: column;
+}
+
 .redirects {
   font-size: small;
   align-items: center;
